# ModelMakerHelper

./: .gitignore  CMakeLists.txt  README. md  README.md  issues.txt  package.xml  plugin.xml  projectideas.docx  setup.py
launch/: gazebo.launch  temp.launch
resource/: BasicInterface.ui
scripts/: model_maker_helper.py  urdf_tweaker.py
src/model_maker_helper/: #editvalues.py#  editvalues.py  model_maker_helper.py
src/urdf_tweaker/: editvalues.py  urdf_tweaker.py
src/urdf_tweaker/tempurdfs/: temp.urdf
